<resources>
    <string name="app_name">JSONPlaceholderTest</string>

    <string name="action_cards">Cards</string>
    <string name="action_contacts">Contacts</string>

    <string name="post_title">Title</string>
    <string name="post_body">Body</string>
    <string name="post_id">Id</string>
    <string name="post_userId">User Id</string>
    <string name="get_post_btn_text">Get post</string>
    <string name="post_interval">1-100</string>

    <string name="comment_name">Name</string>
    <string name="comment_body">Body</string>
    <string name="comment_email">E-mail</string>
    <string name="comment_postId">Post Id</string>
    <string name="get_comment_btn_text">Get comment</string>
    <string name="comment_interval">1-500</string>

    <string name="photo_title">Title</string>
    <string name="photo_album_id">Album Id</string>
    <string name="get_photo_btn_text">Get photo</string>
    <string name="photo_interval">1-5000</string>

    <string name="todo_title">Title</string>
    <string name="todo_user_id">User Id</string>
    <string name="todo_completed">Completed</string>
    <string name="todo_interval">1-200</string>
    <string name="get_todo_btn_text">Get todo</string>
    <string name="todo_completed_text">completed</string>
    <string name="todo_not_completed_text">not completed</string>

    <string name="users_ids">1, 2, 3, 4, 5</string>

    <string name="user_username">Username</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="user_website">Website</string>
    <string name="user_zipcode">Zipcode</string>
    <string name="user_city">City</string>
    <string name="user_street">Street</string>
    <string name="get_user_btn_text">Get user</string>
    <string name="user_interval">1-10</string>

    <string name="developer_name">Орловский Евгений</string>
    <string name="specialization">Android developer</string>
    <string name="contact_phone">+375 29 544 97 57</string>
    <string name="contact_email">orloffski@gmail.com</string>
    <string name="contact_skype">xdigitexx</string>
</resources>
