<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/post_title"
            android:textAlignment="textStart"
            android:textSize="24sp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/post_body"
            android:textSize="14sp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/post_title" />

        <TextView
            android:id="@+id/post_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/post_userId"
            android:textSize="14sp"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/post_body" />

        <TextView
            android:id="@+id/post_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/post_id"
            android:textSize="14sp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/post_body" />

        <EditText
            android:id="@+id/post_id_input"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/post_interval"
            android:inputType="number"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/comment_post_id"
            card_view:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/get_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/get_post_btn_text"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/post_user_id" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
