<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MyCardViewStyle" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Todo Card"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/todo_title"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/todo_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/todo_user_id"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_title"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/todo_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/todo_completed"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/todo_user_id"
            app:layout_constraintTop_toBottomOf="@+id/todo_title"
            android:layout_marginStart="8dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            android:id="@+id/frameLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/todo_completed"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/todo_id_input"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/todo_interval"
                android:inputType="number"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="12dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/get_todo_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:theme="@style/MyButtonStyle"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>