<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MyCardViewStyle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/photo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/photo_title"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/photo_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/photo_album_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/photo_album_id"
                app:layout_constraintLeft_toRightOf="@+id/photo_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_title" />
        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            android:id="@+id/frameLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/photo_id_input"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/photo_interval"
                android:inputType="number"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="12dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/get_photo_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="8dp"
            android:theme="@style/MyButtonStyle"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>